--- a/app/globals.css
+++ b/app/globals.css
@@ -676,7 +676,9 @@ body
   from { opacity: 0; transform: scale(0.95); }
   to { opacity: 1; transform: scale(1); }
 }
-
+.PhoneInputCountrySelectArrow {
+  color: #fff !important;
+}
 .animate-fade-in {
   animation: fade-in 0.4s ease-out;
 }
