updated hoo geya

--- a/app/globals.css
+++ b/app/globals.css
@@ -670,14 +670,17 @@ body
 .PhoneInputInput {
   background: transparent;
   outline: none;
-  color: #fff;
+  color: #000000;
+}
+.dark .PhoneInputInput {
+  color: #fff !important;
 }
 @keyframes fade-in {
   from { opacity: 0; transform: scale(0.95); }
   to { opacity: 1; transform: scale(1); }
 }
 .PhoneInputCountrySelectArrow {
-  color: #fff !important;
+  color: #000000 !important;
 }
 .animate-fade-in {
   animation: fade-in 0.4s ease-out;
