--- a/app/globals.css
+++ b/app/globals.css
@@ -136,7 +136,7 @@ body {
 }
 
 .toggle-input:checked + label {
-  color: #2c6390;
+  color: #131949;
   background: #fff; /*@apply bg-blue-800 */
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
@@ -203,7 +203,7 @@ body {
 
 .step-one-common:after {
   position: absolute;
-  border: 1px dashed #2c6390;
+  border: 1px dashed #131949;
   content: "";
   top: 29%;
   left: 55.5%;
@@ -211,7 +211,7 @@ body {
 }
 .step-two-common:after {
   position: absolute;
-  border: 1px dashed #2c6390;
+  border: 1px dashed #131949;
   content: "";
   top: 29%;
   width: 100%;
@@ -219,7 +219,7 @@ body {
 
 .step-three-common:after {
   position: absolute;
-  border: 1px dashed #2c6390;
+  border: 1px dashed #131949;
   content: "";
   top: 29%;
   right: 60%;
@@ -264,7 +264,7 @@ body {
   text-align: left;
 }
 .account .PhoneInputInput {
-  background-color: #2c6390;
+  background-color: #131949;
   border-radius: 3px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -305,7 +305,7 @@ body
 /* event page steps style */
 .attend-event:after {
   position: absolute;
-  border: 1px dashed #2c6390;
+  border: 1px dashed #131949;
   content: "";
   top: 37%;
   left: 13%;
@@ -321,7 +321,7 @@ body
 }
 .win-trade:after {
   position: absolute;
-  border: 1px dashed #2c6390;
+  border: 1px dashed #131949;
   content: "";
   top: 45%;
   left: 11%;
@@ -348,13 +348,13 @@ body
 }
 
 .demophone input {
-  background-color: #2c6390;
+  background-color: #131949;
   padding: 8px 16px;
   border-radius: 3px;
 }
 .spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
-  border-left: 4px solid #f9c617;
+  border-left: 4px solid #a3753a;
   border-radius: 50%;
   width: 20px;
   margin: 0 auto;
@@ -405,38 +405,39 @@ iframe {
 /* React Toastify Styles */
 
 .Toastify__toast-body {
-  background-color: #2c6390 !important;
-  color: #f9c617 !important;
-  font-weight: 700;
+  background-color: #131949 !important;
+  color: #a3753a !important;
+  font-weight: 500;
   text-align: center;
+  font-size: 15px;
 }
 .Toastify__toast {
-  background-color: #2c6390 !important;
+  background-color: #131949 !important;
 }
 .Toastify__toast-container {
   background-color: transparent !important;
 }
 .Toastify__progress-bar {
-  color: #f9c617 !important;
-  background-color: #f9c617 !important;
+  color: #a3753a !important;
+  background-color: #a3753a !important;
 }
 .Toastify__close-button > svg {
   color: #fff !important;
 }
 .Toastify__close-button > svg:hover {
-  color: #f9c617 !important;
+  color: #a3753a !important;
 }
 .Toastify__close-button {
-  color: #f9c617 !important;
+  color: #a3753a !important;
 }
 .Toastify__close-button--default {
-  color: #f9c617 !important;
+  color: #a3753a !important;
 }
 .Toastify__close-button:focus {
-  color: #f9c617 !important;
+  color: #a3753a !important;
 }
 .Toastify__progress-bar-theme--light {
-  background: #f9c617 !important;
+  background: #a3753a !important;
 }
 .Toastify__close-button--light {
   opacity: 1 !important;
@@ -495,7 +496,7 @@ button:disabled {
 }
 .leaderboard_table thead tr th {
   padding: 10px 10px;
-  background-color: #f9c617;
+  background-color: #a3753a;
 }
 .leaderboard_table tbody tr td {
   padding: 10px 10px;
