--- a/app/globals.css
+++ b/app/globals.css
@@ -668,6 +668,12 @@ body
   clip-path: polygon(0 0, 75% 0, 100% 50%, 75% 100%, 0 100%);
 }
 
+input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+  -webkit-text-fill-color: transparent !important; /* Text color */
+  caret-color: #000; /* Caret color */
+}
+
 .PhoneInputInput {
   background: transparent;
   outline: none;
@@ -677,8 +683,14 @@ body
   color: #fff !important;
 }
 @keyframes fade-in {
-  from { opacity: 0; transform: scale(0.95); }
-  to { opacity: 1; transform: scale(1); }
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 .PhoneInputCountrySelectArrow {
   color: #000000 !important;
